--- a/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/cs_CZ.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -848,34 +848,31 @@ msgstr "Opakuje se vždy {0} počínaje {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Opakuje se vždy {0} {1} počínaje {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "Opakuje se vždy {0} počínaje {1}, {2}-krát, od {3} do {4}."
-msgstr[1] "Opakuje se vždy {0} počínaje {1}, {2}-krát, od {3} do {4}."
-msgstr[2] "Opakuje se vždy {0} počínaje {1}, {2}-krát, od {3} do {4}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
-# 88%
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
 msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
-msgstr[0] "Opakuje se vždy {0} {1} počínaje {2}, {3}-krát, od {4} do {5}."
-msgstr[1] "Opakuje se vždy {0} {1} počínaje {2}, {3}-krát, od {4} do {5}."
-msgstr[2] "Opakuje se vždy {0} {1} počínaje {2}, {3}-krát, od {4} do {5}."
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
-# 77%
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Opakuje se vždy {0} počínaje {1}, {2}-krát."
-msgstr[1] "Opakuje se vždy {0} počínaje {1}, {2}-krát."
-msgstr[2] "Opakuje se vždy {0} počínaje {1}, {2}-krát."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
-# 79%
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Opakuje se vždy {0} {1} počínaje {2}, {3}-krát."
-msgstr[1] "Opakuje se vždy {0} {1} počínaje {2}, {3}-krát."
-msgstr[2] "Opakuje se vždy {0} {1} počínaje {2}, {3}-krát."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "Opakuje se vždy {0} počínaje {1} do {2}, od {3} do {4}."
@@ -4221,6 +4218,9 @@ msgstr "Nelze načíst hierarchii."
 msgid "Expand widget"
 msgstr "Přidat prvky"
 
+msgid "About this widget"
+msgstr ""
+
 #, fuzzy
 msgid "Add new widget"
 msgstr "Přidat prvky"
@@ -5279,21 +5279,19 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr "{0} z kapacity poštovní chránky je použito."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
-msgstr "Překročili jste tvrdou kvótu, nemůžete odesílat ani přijímat zprávy."
+msgid "You have exceeded hard quota, you can not send or receive mails."
+msgstr ""
 
 msgid "At {0} you won't be able to send mails."
 msgstr "Na {0} nebudete moci odesílat zprávy."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Nemůžete odesílat zprávy, neboť jste překročili měkkou kvótu, na {0} "
-"nebudete moci přijímat zprávy."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "Na {0} nebudete moci posílat ani přijímat zprávy."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "Nemůžete odesílat zprávy, neboť jste překročili měkkou kvótu."
@@ -6142,39 +6140,33 @@ msgstr "Opakuje se vždy v %s počínaje %s."
 msgid "Occurs every %s %s effective %s."
 msgstr "Opakuje se vždy v %s %s počínaje %s."
 
-# 76%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Opakuje se vždy v %s počínaje %s, %s-krát, od %s do %s."
-msgstr[1] "Opakuje se vždy v %s počínaje %s, %s-krát, od %s do %s."
-msgstr[2] "Opakuje se vždy v %s počínaje %s, %s-krát, od %s do %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
-# 76%
-# 95%
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
-msgstr[0] "Opakuje se vždy v %s %s počínaje %s, %s-krát, od %s do %s."
-msgstr[1] "Opakuje se vždy v %s %s počínaje %s, %s-krát, od %s do %s."
-msgstr[2] "Opakuje se vždy v %s %s počínaje %s, %s-krát, od %s do %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
-# 77%
-# 81%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Opakuje se vždy v %s počínaje %s, %s-krát."
-msgstr[1] "Opakuje se vždy v %s počínaje %s, %s-krát."
-msgstr[2] "Opakuje se vždy v %s počínaje %s, %s-krát."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
-# 77%
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Opakuje se vždy v %s %s počínaje %s, %s-krát."
-msgstr[1] "Opakuje se vždy v %s %s počínaje %s, %s-krát."
-msgstr[2] "Opakuje se vždy v %s %s počínaje %s, %s-krát."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
 # 76%
 # 75%
@@ -6262,14 +6254,10 @@ msgstr "Dva výskyty nejsou možné ve stejný den"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Označili jste '%s' jako zdroj. Nelze naplánovat schůzku s '%s', protože "
-"nemáte oprávnění pro tento účet. Buď zadejte název jako povinné či volitelné "
-"účastníkem, nebo se obraťte na svého správce ohledně povolení naplánovat "
-"'%s'."
 
 #, php-format
 msgid ""
