--- a/server/language/da_DK.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/da_DK.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -821,28 +821,27 @@ msgstr "Forekommer hver {0} i kraft {1}"
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Forekommer hver {0} {1} i kraft {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "Forekommer hver {0} i kraft {1} for {2} i perioden fra {3} til {4}"
-msgstr[1] "Forekommer hver {0} i kraft {1} for {2} i perioden fra {3} til {4}"
-
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
-msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
 msgstr[0] ""
-"Forekommer hver {0} {1} i kraft {2} for {3} hændelse fra {4} til {5}."
-msgstr[1] "Forekommer hver {0} {1} i kraft {2} for {3} hændelser {4} til {5}"
+msgstr[1] ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Forekommer hver {0} i kraft  {1} for {2} hændelse."
-msgstr[1] "Forekommer hver {0} i kraft {1} for {2} hændelser."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
+msgid_plural ""
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Forekommer hver {0} {1} i kraft {2} for {3} hændelse."
-msgstr[1] "Forekommer hver {0} {1} i kraft {2} for {3} hændelser."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "Forekommer hver {0} i kraft {1} indtil {2} fra {3} til {4}."
@@ -4059,6 +4058,9 @@ msgstr "Luk widget panel"
 msgid "Expand widget"
 msgstr "Udvid widget panel"
 
+msgid "About this widget"
+msgstr ""
+
 #, fuzzy
 msgid "Add new widget"
 msgstr "Tilføj widgets"
@@ -5082,23 +5084,19 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr "{0} af postkassen er brugt."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
 msgstr ""
-"Du har overskredet den hårde kvotagrænse, du kan ikke sende eller modtage "
-"emails."
 
 msgid "At {0} you won't be able to send mails."
 msgstr "På {0} vil du ikke kunne sende emails."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Du kan ikke sende email fordi du har overskredet din (bløde) kvote, på {0} "
-"så vil du heller ikke kunne modtage email."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "På {0} vil du ikke kunne sende eller modtage emails."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "Du kan ikke sende emails da du har overskredet kvoten."
@@ -5901,26 +5899,26 @@ msgid "Occurs every %s %s effective %s."
 msgstr ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
 msgstr[0] ""
 msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
 msgstr[0] ""
 msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
 msgstr[0] ""
 msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
 msgstr[0] ""
 msgstr[1] ""
 
@@ -5992,7 +5990,7 @@ msgstr ""
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
