--- a/server/language/is_IS.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/is_IS.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -808,27 +808,27 @@ msgstr "Tíðni: 1 {0} með upphaf {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Tíðni: {0} {1} með upphaf {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "Tíðni: 1 {0} með upphaf {1} í {2} skipti frá {3} til {4}."
-msgstr[1] "Tíðni: 1 {0} með upphaf {1} í {2} skipti frá {3} til {4}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
 msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
-msgstr[0] "Tíðni: {0} {1} með upphaf {2} í {3} skipti frá {4} til {5}."
-msgstr[1] "Tíðni: {0} {1} með upphaf {2} í {3} skipti frá {4} til {5}."
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Tíðni: 1 {0} með upphaf {1} í {2} skipti."
-msgstr[1] "Tíðni: 1 {0} með upphaf {1} í {2} skipti."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Tíðni: {0} {1} með upphaf {2} í {3} skipti."
-msgstr[1] "Tíðni: {0} {1} með upphaf {2} í {3} skipti."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "Tíðni: 1 {0} með upphaf {1} þar til {2} frá {3} til {4}."
@@ -3949,6 +3949,9 @@ msgstr "Loka græju"
 msgid "Expand widget"
 msgstr "Opna græju"
 
+msgid "About this widget"
+msgstr ""
+
 msgid "Add new widget"
 msgstr "Bæta við græju"
 
@@ -4935,22 +4938,19 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr "{0} af pósthólfsplássi er notað."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
 msgstr ""
-"Þú hefur farið framyfir raunkvóta, þú getur ekki sent eða tekið á móti pósti."
 
 msgid "At {0} you won't be able to send mails."
 msgstr "Við {0} muntu ekki geta sent tölvupóst."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Þú getur ekki sent póst þar sem þú hefur farið fram úr varúðarkvóta, við {0} "
-"muntu ekki geta tekið á móti pósti."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "Við {0} muntu hvorki geta sent né tekið á móti pósti."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "Þú getur ekki sent póst þar sem þú hefur farið fram úr varúðarkvóta."
@@ -5748,28 +5748,28 @@ msgid "Occurs every %s %s effective %s."
 msgstr "Endurtekið á %s %s fresti með upphaf %s."
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Endurtekið á %s fresti með upphaf %s %s sinni frá %s til %s."
-msgstr[1] "Endurtekið á %s fresti með upphaf %s %s sinnum frá %s til %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
-msgstr[0] "Endurtekið á %s %s fresti með upphaf %s %s sinni frá %s til %s."
-msgstr[1] "Endurtekið á %s %s fresti með upphaf %s %s sinnum frá %s til %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Endurtekið á %s fresti með upphaf %s %s sinni."
-msgstr[1] "Endurtekið á %s fresti með upphaf %s %s sinnum."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Endurtekið á %s %s fresti með upphaf %s %s sinni."
-msgstr[1] "Endurtekið á %s %s fresti með upphaf %s %s sinnum."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
 msgid "Occurs every %s effective %s until %s from %s to %s."
@@ -5844,14 +5844,10 @@ msgstr "Tvær endurtekningar geta ekki átt sér stað sama daginn"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Þú merktir '%s' sem aðföng. Þú getur ekki bókað fund með '%s' því þú hefur "
-"ekki tilskilin réttindi fyrir þann aðgang. Sláðu inn nafnið annaðhvort sem "
-"nauðsynlegan eða valkvæðan þáttakanda, þú getur líka tala við kerfisstjórn "
-"um að veita þér réttindi til að bóka '%s'."
 
 #, php-format
 msgid ""
