--- a/server/language/nb_NO.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/nb_NO.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -842,27 +842,27 @@ msgstr "Inntreffer hver {0} med start {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Inntreffer hver {0} {1} med start {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "Inntreffer hver {0} med start {1}, {2} gang fra {3} til {4}."
-msgstr[1] "Inntreffer hver {0} med start {1}, {2} ganger fra {3} til {4}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
 msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
-msgstr[0] "Inntreffer hver {0} {1} med start {2}, {3} gang fra {4} til {5}."
-msgstr[1] "Inntreffer hver {0} {1} med start {2}, {3} ganger fra {4} til {5}."
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Inntreffer hver {0} med start {1}, {2} gang."
-msgstr[1] "Inntreffer hver {0} med start {1}, {2} ganger."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Inntreffer hver {0} {1} med start {2}, {3} gang."
-msgstr[1] "Inntreffer hver {0} {1} med start {2}, {3} ganger."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "Inntreffer hver {0} med start fra {1} til {2} fra {3} til {4}."
@@ -4096,6 +4096,9 @@ msgstr "Minimer miniprogram"
 msgid "Expand widget"
 msgstr "Utvid miniprogram"
 
+msgid "About this widget"
+msgstr ""
+
 msgid "Add new widget"
 msgstr "Legg til miniprogram"
 
@@ -5095,22 +5098,19 @@ msgstr "Det er ikke satt noen kvote på din konto."
 msgid "{0} of mailbox space is used."
 msgstr "{0} av e-postboks er brukt."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
 msgstr ""
-"Du har oversteget din hard-kvotegrense, du kan ikke sende eller motta e-post."
 
 msgid "At {0} you won't be able to send mails."
 msgstr "På {0} vil du ikke kunne sende e-post."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Du kan ikke sende e-post fordi du har oversteget din myk-kvotegrense, på {0} "
-"så vil du heller ikke kunne motta e-post."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "På {0} så vil du ikke kunne sende eller motta e-post."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "Du har oversteget din myk-kvotegrense, så du kan ikke sende e-post."
@@ -5931,28 +5931,28 @@ msgid "Occurs every %s %s effective %s."
 msgstr "Inntreffer hver %s %s med start fra %s."
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Inntreffer hver %s med start fra %s, %s gang fra %s til %s."
-msgstr[1] "Inntreffer hver %s med start fra %s, %s ganger fra %s til %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
-msgstr[0] "Inntreffer hver %s %s med start fra %s, %s gang fra %s til %s."
-msgstr[1] "Inntreffer hver %s %s med start fra %s, %s ganger fra %s til %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Inntreffer hver %s med start %s, %s gang."
-msgstr[1] "Inntreffer hver %s med start %s, %s ganger."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Inntreffer hver %s %s med start %s, %s gang."
-msgstr[1] "Inntreffer hver %s %s med start %s, %s ganger."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
 msgid "Occurs every %s effective %s until %s from %s to %s."
@@ -6031,14 +6031,10 @@ msgstr "To forekomster kan ikke skje på samme dag"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Du markerte '%s' som en Ressurs. Du kan ikke planlegge et møte med '%s' "
-"fordi du har ikke tilstrekkelig med rettigheter for den kontoen. Bruk et av "
-"valgene Nødvendig eller Valgfri, eller snakk med administrator om å få "
-"rettigheter til å planlegge '%s' som en Ressurs."
 
 #, php-format
 msgid ""
