--- a/server/language/pl_PL.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pl_PL.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -825,35 +825,30 @@ msgstr "Występuje co {0} , zaczynając w {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Występuje co {0} {1} , zaczynając w {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
 msgstr[0] ""
-"Występuje co {0} , zaczynając w {1} dla {2} powtórzenia od {3} do {4}."
 msgstr[1] ""
-"Występuje co {0} , zaczynając w {1} dla {2} powtórzeń od {3} do {4}."
 msgstr[2] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
 msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
 msgstr[0] ""
-"Występuje co {0} {1} {\\i1}efektywne {\\i0} {\\i1}dla {3}występowania od {4} "
-"do {5}."
 msgstr[1] ""
-"{0} {1} Występuje co {0} {1} skuteczny {2} dla {3} występuje {4} do {5}."
 msgstr[2] ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Występuje co {0} , zaczynając w {1} dla {2} powtórzenia."
-msgstr[1] "Występuje co {0} , zaczynając w {1} dla {2} powtórzeń."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Występuje co {0} {1} , zaczynając w {2} dla {3} powtótrzenia."
-msgstr[1] "Występuje co {0} {1} , zaczynając w {2} dla {2} powtórzeń."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
@@ -3984,6 +3979,9 @@ msgstr "Ukryj widżety"
 msgid "Expand widget"
 msgstr "Rozwiń widżet"
 
+msgid "About this widget"
+msgstr ""
+
 msgid "Add new widget"
 msgstr "Dodaj nowy widżet"
 
@@ -4976,21 +4974,19 @@ msgstr "Limit nie jest ustalany w twoim sklepie."
 msgid "{0} of mailbox space is used."
 msgstr "{0} zajętego miejsca w skrzynce."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
-msgstr "Twardy limit przekroczony, nie możeszodbierać i wysyłać wiadomości."
+msgid "You have exceeded hard quota, you can not send or receive mails."
+msgstr ""
 
 msgid "At {0} you won't be able to send mails."
 msgstr "Od {0} nie możesz wysyłać e-maili."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Miękki limit przekroczony, nie możesz wysyłać e-maili,od {0} nie możesz "
-"również odbierać e-maili."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "Od {0} nie możesz wysyłać lub odbierać e-maili."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "Miękki limit przekroczony, nie możesz wysyłaće-maili."
@@ -5799,33 +5795,32 @@ msgid "Occurs every %s %s effective %s."
 msgstr "Ma miejsce co %s %s, zaczynając od %s."
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Ma miejsce co %s, zaczynając od %s dla %s powtórzenia od %s do %s."
-msgstr[1] ""
-msgstr[2] "Odbywa się co %s, zaczynając od %s dla %s powtórzeń od %s do %s."
-
-#, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
 msgstr[0] ""
-"Odbywa się co %s %s, zaczynając od %s dla %s powtarzanie od %s do %s."
 msgstr[1] ""
-msgstr[2] "Odbywa się co %s %s, zaczynając od %s dla %s powtórzeń od %s do %s."
+msgstr[2] ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Odbywa się co %s, zaczynając od %s dla powtórzenia %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
 msgstr[1] ""
-msgstr[2] "Odbywa się co %s, zaczynając od %s dla powtórzeń %s."
+msgstr[2] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Ma miejsce co %s %s, zaczynając od %s dla powtórzenia %s."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
 msgstr[1] ""
-msgstr[2] "Ma miejsce co %s %s, zaczynając od %s dla powtórzeń %s."
+msgstr[2] ""
+
+#, php-format
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
 #, php-format
 msgid "Occurs every %s effective %s until %s from %s to %s."
@@ -5899,14 +5894,10 @@ msgstr "Nie można umieścić przypomnienia dwa razy tego samego dnia"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Zaznaczyłeś '%s' jako zasoby. Nie możesz zaplanować spotkania z '%s', gdyż "
-"nie masz niezbędnych uprawnień do tego konta.Podaj nazwę jako uczestnika "
-"wymaganego lub opcjonalnego lub zwróć się do administratora w celu "
-"uzyskaniauprawnień do zaplanowania '%s'."
 
 #, php-format
 msgid ""
