--- a/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/pt_PT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -814,28 +814,27 @@ msgstr "Acontece a cada {0} a partir de {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Acontece a cada {0} {1} a partir de {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "Acontece a cada {0} a partir de {1} por {2} vez de {3} até {4}."
-msgstr[1] "Acontece a cada {0} a partir de {1} por {2} vezes de {3} até {4}."
-
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
-msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
-msgstr[0] "Acontece a cada {0} {1} a partir de {2} por {3} vez de {4} até {5}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
+msgstr[0] ""
 msgstr[1] ""
-"Acontece a cada {0} {1} a partir de {2} por {3} vezes de {4} até {5}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Acontece a cada {0} a partir de {1} por {2} vez."
-msgstr[1] "Acontece a cada {0} a partir de {1} por {2} vezes."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
+msgid_plural ""
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Acontece a cada {0} {1} a partir de {2} por {3} vez."
-msgstr[1] "Acontece a cada {0} {1} a partir de {2} por {3} vezes."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "Acontece a cada {0} a partir de {1} até {2} de {3} até {4}."
@@ -3957,6 +3956,9 @@ msgstr "Colapsar widget"
 msgid "Expand widget"
 msgstr "Expandir widget"
 
+msgid "About this widget"
+msgstr ""
+
 msgid "Add new widget"
 msgstr "Adicionar novo widget"
 
@@ -4940,21 +4942,19 @@ msgstr "Não foi definida nenhuma quota para a sua caixa."
 msgid "{0} of mailbox space is used."
 msgstr "{0} da caixa de correio usada."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
-msgstr "Excedeu a quota. Não pode enviar nem receber E-mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
+msgstr ""
 
 msgid "At {0} you won't be able to send mails."
 msgstr "A partir de {0} não vai conseguir enviar E-mails."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Não pode enviar E-mails pois excedeu a quota de aviso, a partir de {0} não "
-"vai poder receber E-mails."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "A partir de {0} não vai poder enviar nem receber E-mails."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "Não pode enviar E-mails pois excedeu a quota de aviso."
@@ -5758,28 +5758,28 @@ msgid "Occurs every %s %s effective %s."
 msgstr "Acontece a cada %s %s a partir de %s."
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Acontece a cada %s a partir de %s por %s vez de %s até %s."
-msgstr[1] "Acontece a cada %s a partir de %s por %s vezes de %s até %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
-msgstr[0] "Acontece a cada %s %s a partir de %s por %s vez de %s até %s."
-msgstr[1] "Acontece a cada %s %s a partir de %s por %s vezes de %s até %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Acontece a cada %s a partir de %s por %s vez."
-msgstr[1] "Acontece a cada %s a partir de %s por %s vezes."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Acontece a cada %s %s a partir de %s por %s vez."
-msgstr[1] "Acontece a cada %s %s a partir de %s por %s vezes."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 #, php-format
 msgid "Occurs every %s effective %s until %s from %s to %s."
@@ -5853,14 +5853,10 @@ msgstr "Dois eventos não podem acontecer no mesmo dia"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Marcou '%s' como um recurso. Não pode agendar uma reunião com '%s' porque "
-"não dispõe de permissões apropriadas para essa conta. Poderá inserir o nome "
-"do participante como obrigatório ou opcional ou contacte o seu administrador "
-"para atribuir permissões para agendar '%s'."
 
 #, php-format
 msgid ""
