--- a/server/language/ru_RU.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ru_RU.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -842,31 +842,30 @@ msgstr "Occurs every {0} effective {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Occurs every {0} {1} effective {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
-msgstr[1] "Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[2] ""
-
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
-msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
 msgstr[0] ""
-"Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
-msgstr[1] "Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
+msgstr[1] ""
 msgstr[2] ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Occurs every {0} effective {1} for {2} occurence."
-msgstr[1] "Occurs every {0} effective {1} for {2} occurences."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
+msgid_plural ""
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Occurs every {0} {1} effective {2} for {3} occurence."
-msgstr[1] "Occurs every {0} {1} effective {2} for {3} occurences."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
@@ -4163,6 +4162,9 @@ msgstr "Свернуть панель виджетов"
 msgid "Expand widget"
 msgstr "Раскрыть панель виджетов"
 
+msgid "About this widget"
+msgstr ""
+
 #, fuzzy
 msgid "Add new widget"
 msgstr "Добавить виджет"
@@ -5199,22 +5201,19 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr "{0} места используется."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
 msgstr ""
-"Вы достигли жесткой квоты и поэтому не сможете отправить или принять письмо."
 
 msgid "At {0} you won't be able to send mails."
 msgstr "При {0} вы не сможете отправлять письма."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"При превышении мягкой квоты вы не сможете отправлять письма, при {0} - "
-"принимать их."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "При {0} вы не сможете ни отправить, ни принять почту."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "Вы не сможете отправлять письма в сдучае достижения мягкой квоты."
@@ -6064,37 +6063,32 @@ msgstr "Occurs every {0} effective {1}."
 msgid "Occurs every %s %s effective %s."
 msgstr "Occurs every {0} effective {1}."
 
-# 76%
-#, fuzzy, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
-msgstr[1] "Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
+#, php-format
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
-# 76%
-# 95%
-#, fuzzy, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
-msgstr[0] "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
-msgstr[1] "Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
+#, php-format
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
-# 81%
-#, fuzzy, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Occurs every {0} effective {1} for {2} occurence."
-msgstr[1] "Occurs every {0} effective {1} for {2} occurences."
+#, php-format
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
-# 77%
-#, fuzzy, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Occurs every {0} effective {1} for {2} occurence."
-msgstr[1] "Occurs every {0} effective {1} for {2} occurences."
+#, php-format
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 msgstr[2] ""
 
 # 76%
@@ -6183,14 +6177,10 @@ msgstr "Два события не могут произойти в один и 
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Вы обозначили «%s» как ресурс. Вы не сможете организовать встречу с «%s» за "
-"неимением достаточных прав для этой учётной записи. Введите имя "
-"обязательного или необязательного участника или обратитесь к вашему "
-"системному администратору для получения доступа к расписанию «%s»."
 
 #, php-format
 msgid ""
