--- a/server/language/sl_SI.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/sl_SI.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -872,40 +872,35 @@ msgstr "Pojavi se vsakih {0} efektivno {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Pojavi se vsakih {0} {1} efektivno {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
 msgstr[0] ""
-"Pojavi se vsakih {0} efektivno {1} za {2} pojavljanje od {3} do {4}."
-msgstr[1] "Pojavi se vsakih {0} efektivno {1} za {2} pojavljanj od {3} do {4}."
-msgstr[2] "Pojavi se vsakih {0} efektivno {1} za {2} pojavljanj od {3} do {4}."
-msgstr[3] "Pojavi se vsakih {0} efektivno {1} za {2} pojavljanj od {3} do {4}."
-
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
-msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
-msgstr[0] ""
-"Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanje od {4} do {5}."
 msgstr[1] ""
-"Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanj od {4} do {5}."
 msgstr[2] ""
-"Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanj od {4} do {5}."
 msgstr[3] ""
-"Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanj od {4} do {5}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Pojavi se vsakih {0} efektivno {1} za {2} pojavljanje."
-msgstr[1] "Pojavi se vsakih {0} efektivno {1} za {2} pojavljanj."
-msgstr[2] "Pojavi se vsakih {0} efektivno {1} za {2} pojavljanj."
-msgstr[3] "Pojavi se vsakih {0} efektivno {1} za {2} pojavljanj."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
+msgid_plural ""
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanje."
-msgstr[1] "Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanj."
-msgstr[2] "Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanj."
-msgstr[3] "Pojavi se vsakih {0} {1} efektivno {2} za {3} pojavljanj."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
+
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "Pojavi se vsakih {0} efektivno {1} dokler {2} od {3} do {4}."
@@ -4283,6 +4278,9 @@ msgstr "Nalaganje hierarhije je bilo neuspešno."
 msgid "Expand widget"
 msgstr "Dodaj pripomočke"
 
+msgid "About this widget"
+msgstr ""
+
 #, fuzzy
 msgid "Add new widget"
 msgstr "Dodaj pripomočke"
@@ -5348,23 +5346,19 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr "{0} prostora v nabiralniku je uporabljeno."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
 msgstr ""
-"Presegli ste dovoljeno kvoto, ne morete pošiljati ali prejemati elektronskih "
-"sporočil."
 
 msgid "At {0} you won't be able to send mails."
 msgstr "Na {0} ne boste mogli pošiljati elektronskih sporočil."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Ne morete pošiljati elektronskih sporočil zaradi presega mehke kvote, na {0} "
-"ne boste več mogli prejemati elektronski sporočil."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "Na {0} ne boste mogli pošiljati ali prejemati elektronskih sporočil."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr ""
@@ -6212,42 +6206,37 @@ msgstr "Pojavi se vsakih %s efektivno %s."
 msgid "Occurs every %s %s effective %s."
 msgstr "Pojavi se vsakih %s %s efektivno %s."
 
-# 76%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Pojavi se vsakih %s efektivno %s za %s pojavljanje od %s do %s."
-msgstr[1] "Pojavi se vsakih %s efektivno %s za %s pojavljanj od %s do %s."
-msgstr[2] "Pojavi se vsakih %s efektivno %s za %s pojavljanj od %s do %s."
-msgstr[3] "Pojavi se vsakih %s efektivno %s za %s pojavljanj od %s do %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
-# 76%
-# 95%
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
-msgstr[0] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanje od %s do %s."
-msgstr[1] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanj od %s do %s."
-msgstr[2] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanj od %s do %s."
-msgstr[3] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanj od %s do %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
-# 81%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Pojavi se vsakih %s efektivno %s za %s pojavljanje."
-msgstr[1] "Pojavi se vsakih %s efektivno %s za %s pojavljanj."
-msgstr[2] "Pojavi se vsakih %s efektivno %s za %s pojavljanj."
-msgstr[3] "Pojavi se vsakih %s efektivno %s za %s pojavljanj."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
-# 77%
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanje."
-msgstr[1] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanj."
-msgstr[2] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanj."
-msgstr[3] "Pojavi se vsakih %s %s efektivno %s za %s pojavljanj."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 # 76%
 # 75%
@@ -6341,14 +6330,10 @@ msgstr "Dve pojavljanji se ne moreta pojaviti na isti dan"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Označili ste '%s' kot izvor. sestanka ne morete načrtvovati z '%s' ker "
-"nimate primernih dovoljenje za ta račun. Lahko vnesete ime kot zahtevano ali "
-"pa kot nezahtevanega člana, ali pa govorite z administratorjem, da vam "
-"dodeli dovoljenja za načrtovanje '%s'."
 
 #, php-format
 msgid ""
