--- a/server/language/ar.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ar.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -842,9 +842,9 @@ msgstr ""
 msgid "Occurs every {0} {1} effective {2}."
 msgstr ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -852,9 +852,9 @@ msgstr[3] ""
 msgstr[4] ""
 msgstr[5] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
 msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -862,8 +862,8 @@ msgstr[3] ""
 msgstr[4] ""
 msgstr[5] ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -871,8 +871,8 @@ msgstr[3] ""
 msgstr[4] ""
 msgstr[5] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -3914,6 +3914,9 @@ msgstr ""
 msgid "Expand widget"
 msgstr ""
 
+msgid "About this widget"
+msgstr ""
+
 msgid "Add new widget"
 msgstr ""
 
@@ -4885,7 +4888,7 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr ""
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
 msgstr ""
 
 msgid "At {0} you won't be able to send mails."
@@ -4893,10 +4896,10 @@ msgstr ""
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
 
-msgid "At {0} you won't be able to send or recieve mails."
+msgid "At {0} you won't be able to send or receive mails."
 msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
@@ -5671,8 +5674,8 @@ msgid "Occurs every %s %s effective %s."
 msgstr ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -5681,8 +5684,8 @@ msgstr[4] ""
 msgstr[5] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -5691,8 +5694,8 @@ msgstr[4] ""
 msgstr[5] ""
 
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -5701,8 +5704,8 @@ msgstr[4] ""
 msgstr[5] ""
 
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -5778,7 +5781,7 @@ msgstr ""
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
