--- a/server/language/it_IT.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/it_IT.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -850,28 +850,27 @@ msgstr "Ogni {0} dal giorno {1}."
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "Ogni {0} {1} dal giorno {2}."
 
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "Ogni {0} dal giorno {1} per {2} occorrenza dalle ore {3} alle {4}."
-msgstr[1] "Ogni {0} dal giorno {1} per {2} occorrenze dalle ore {3} alle {4}."
-
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
-msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
 msgstr[0] ""
-"Ogni {0} {1} dal giorno {2} per {3} occorrenza dalle ore {4} alle {5}."
-msgstr[1] "Ogni {0} dal giorno {1} per {2} occorrenze dalle ore {3} alle {4}."
+msgstr[1] ""
 
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "Ogni {0} dal giorno {1} per {2} occorrenza."
-msgstr[1] "Ogni {0} dal giorno {1} per {2} occorrenze."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
+msgid_plural ""
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
+msgstr[1] ""
 
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "Ogni {0} {1} dal giorno {2} per {3} occorrenza."
-msgstr[1] "Ogni {0} {1} dal giorno {2} per {3} occorrenze."
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
+msgstr[1] ""
+
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "Ogni {0} dal giorno {1} fino al {2} dalle ore {3} alle {4}."
@@ -4217,6 +4216,9 @@ msgstr "Chiudi pannello widget"
 msgid "Expand widget"
 msgstr "Espandi pannello widget"
 
+msgid "About this widget"
+msgstr ""
+
 #, fuzzy
 msgid "Add new widget"
 msgstr "Aggiungi widget"
@@ -5271,23 +5273,19 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr "{0} di spazio utilizzato."
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
+msgid "You have exceeded hard quota, you can not send or receive mails."
 msgstr ""
-"Hai superato il limite massimo di archiviazione. Non potrai più ricevere o "
-"inviare email."
 
 msgid "At {0} you won't be able to send mails."
 msgstr "A {0} non potrai più inviare email."
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
+"able to receive mails."
 msgstr ""
-"Non puoi più inviare email perché hai superato il limite di archiviazione di "
-"allarme. A {0} non potrai più ricevere email."
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "A {0} non potrai più inviare o ricevere email."
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr ""
@@ -6140,36 +6138,29 @@ msgstr "Ogni %s dal giorno %s."
 msgid "Occurs every %s %s effective %s."
 msgstr "Ogni %s %s dal giorno %s."
 
-# 76%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Ogni %s dal giorno %s per %s occorrenza dalle ore %s alle %s."
-msgstr[1] "Ogni %s dal giorno %s per %s occorrenze dalle ore %s alle %s."
-
-# 76%
-# 95%
-#, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
 msgstr[0] ""
-"Si verifica ogni %s %s dal giorno %s per %s occorrenza dalle %s alle %s."
 msgstr[1] ""
-"Si verifica ogni %s %s dal giorno %s per %s occorrenze dalle %s alle %s."
 
-# 81%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Si verifica ogni %s dal giorno %s per %s occorrenza."
-msgstr[1] "Si verifica ogni %s dal giorno %s per %s occorrenze."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
+msgstr[1] ""
 
-# 77%
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Si verifica ogni %s %s dal giorno %s per %s occorrenza."
-msgstr[1] "Si verifica ogni %s %s dal giorno %s per %s occorrenze."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
+
+#, php-format
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
+msgstr[1] ""
 
 # 76%
 # 75%
@@ -6255,15 +6246,10 @@ msgstr "Due occorrenze non possono capitare nello stesso giorno"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"Hai selezionato '%s' come risorsa. Non puoi fissare un appuntamento con '%s' "
-"poiché non disponi di sufficienti permessi per quell'account. Aggiungi "
-"l'utente come partecipante richiesto/facoltativo oppure contatta "
-"l'amministratore di sistema per richiedere i permessi per fissare un "
-"appuntamento con '%s'."
 
 #, php-format
 msgid ""
