--- a/server/language/ja_JP.UTF-8/LC_MESSAGES/zarafa_webapp.po
+++ b/server/language/ja_JP.UTF-8/LC_MESSAGES/zarafa_webapp.po
@@ -838,28 +838,23 @@ msgstr "毎{0}実施　有効{1}"
 msgid "Occurs every {0} {1} effective {2}."
 msgstr "毎{0}{1}実施　有効{2}"
 
-# 76%
-msgid "Occurs every {0} effective {1} for {2} occurence from {3} to {4}."
+msgid "Occurs every {0} effective {1} for {2} occurrence from {3} to {4}."
 msgid_plural ""
-"Occurs every {0} effective {1} for {2} occurences from {3} to {4}."
-msgstr[0] "毎{0}実施　{2}まで{3}から{4}まで{1}有効"
+"Occurs every {0} effective {1} for {2} occurrences from {3} to {4}."
+msgstr[0] ""
 
-# 76%
-# 88%
-msgid "Occurs every {0} {1} effective {2} for {3} occurence from {4} to {5}."
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence from {4} to {5}."
 msgid_plural ""
-"Occurs every {0} {1} effective {2} for {3} occurences {4} to {5}."
-msgstr[0] "毎{0}実施　{2}まで{3}から{4}まで{1}有効"
+"Occurs every {0} {1} effective {2} for {3} occurrences {4} to {5}."
+msgstr[0] ""
 
-# 77%
-msgid "Occurs every {0} effective {1} for {2} occurence."
-msgid_plural "Occurs every {0} effective {1} for {2} occurences."
-msgstr[0] "毎{0}実施 {1}から{2}まで有効"
+msgid "Occurs every {0} effective {1} for {2} occurrence."
+msgid_plural "Occurs every {0} effective {1} for {2} occurrences."
+msgstr[0] ""
 
-# 79%
-msgid "Occurs every {0} {1} effective {2} for {3} occurence."
-msgid_plural "Occurs every {0} {1} effective {2} for {3} occurences."
-msgstr[0] "毎{0}{1}実施 {3}から{4}まで有効{2}"
+msgid "Occurs every {0} {1} effective {2} for {3} occurrence."
+msgid_plural "Occurs every {0} {1} effective {2} for {3} occurrences."
+msgstr[0] ""
 
 msgid "Occurs every {0} effective {1} until {2} from {3} to {4}."
 msgstr "毎{0}実施　{2}まで{3}から{4}まで{1}有効"
@@ -4164,6 +4159,9 @@ msgstr "階層情報を広げる"
 msgid "Expand widget"
 msgstr "ウィジェット追加"
 
+msgid "About this widget"
+msgstr ""
+
 #, fuzzy
 msgid "Add new widget"
 msgstr "ウィジェット追加"
@@ -5208,19 +5206,19 @@ msgstr ""
 msgid "{0} of mailbox space is used."
 msgstr "{0}のメールボックスのスペースが使用済み"
 
-msgid "You have exceeded hard quota, you can not send or recieve mails."
-msgstr "ディスク容量の割り当てサイズを超えたのでメールの受送信ができません。"
+msgid "You have exceeded hard quota, you can not send or receive mails."
+msgstr ""
 
 msgid "At {0} you won't be able to send mails."
 msgstr "{0}によりメール送信ができません。"
 
 msgid ""
 "You can not send mails as you have exceeded soft quota, at {0} you won't be "
-"able to recieve mails."
-msgstr "{0}のソフト割当量を超えたためメール送信できません。"
+"able to receive mails."
+msgstr ""
 
-msgid "At {0} you won't be able to send or recieve mails."
-msgstr "{0}によりメールの送受信ができません。"
+msgid "At {0} you won't be able to send or receive mails."
+msgstr ""
 
 msgid "You can not send mails as you have exceeded soft quota."
 msgstr "ソフト割当量を超えたためメール送信できません。"
@@ -6080,31 +6078,25 @@ msgstr "Occurs every %s effective %s."
 msgid "Occurs every %s %s effective %s."
 msgstr "Occurs every %s %s effective %s."
 
-# 76%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s effective %s for %s occurences from %s to %s."
-msgstr[0] "Occurs every %s effective %s for %s occurence from %s to %s."
+msgid "Occurs every %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s effective %s for %s occurrences from %s to %s."
+msgstr[0] ""
 
-# 76%
-# 95%
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence from %s to %s."
-msgid_plural "Occurs every %s %s effective %s for %s occurences %s to %s."
-msgstr[0] "Occurs every %s %s effective %s for %s occurence from %s to %s."
+msgid "Occurs every %s %s effective %s for %s occurrence from %s to %s."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences %s to %s."
+msgstr[0] ""
 
-# 77%
-# 81%
 #, php-format
-msgid "Occurs every %s effective %s for %s occurence."
-msgid_plural "Occurs every %s effective %s for %s occurences."
-msgstr[0] "Occurs every %s effective %s for %s occurence."
+msgid "Occurs every %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s effective %s for %s occurrences."
+msgstr[0] ""
 
-# 77%
 #, php-format
-msgid "Occurs every %s %s effective %s for %s occurence."
-msgid_plural "Occurs every %s %s effective %s for %s occurences."
-msgstr[0] "Occurs every %s %s effective %s for %s occurence."
+msgid "Occurs every %s %s effective %s for %s occurrence."
+msgid_plural "Occurs every %s %s effective %s for %s occurrences."
+msgstr[0] ""
 
 # 76%
 # 75%
@@ -6193,14 +6185,10 @@ msgstr "定期的な予定は同日に実施することはできません。"
 #, php-format
 msgid ""
 "You marked '%s' as a resource. You cannot schedule a meeting with '%s' "
-"because you do not have the appropiate permissions for that account. Either "
+"because you do not have the appropriate permissions for that account. Either "
 "enter the name as a required or optional attendee or talk to your "
 "administrator about giving you permission to schedule '%s'."
 msgstr ""
-"リソースとして'%s'とマークしました。あなたはこのアカウントに大して適切な権限"
-"を持っていないため、会議を'%s'としてスケジュールすることはできません。'%s'と"
-"して予定を立てるために、必須もしくは任意の参加者として名前を入力するか、あな"
-"たに許可を与えるよう管理者に問合せをして下さい。"
 
 #, php-format
 msgid ""
